<resources>
    <string name="app_name">ContactList</string>
    <string name="YourName">Enter your name</string>
    <string name="YourNumber">Enter your number</string>
    <string name="add">add</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="nextPage">nextPage</string>
    <string name="AreYouSure">UPDATE CONTACT</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ok">ok</string>
    <string name="deleteContact">Delete Contact?</string>
    <string name="TAB">TAB1</string>
    <string name="TAB2">TAB2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>